@@ -237,6 +237,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #26587: the site module now allows .pth files to specify files to be
+  added to sys.path (e.g. zip files).
+
 - Issue #25609: Introduce contextlib.AbstractContextManager and
   typing.ContextManager.
 
